<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="delete_all">Delete <b>EVERYTHING</b>?</string>
    <string name="sure">(permanent and not recoverable)</string>
    <string name="purchase"><b>Add\nPurchase</b></string>
    <string name="count">Items</string>
    <string name="grand_total"><b><u>Grand Total</u></b> : $</string>
    <string name="delete_last"><b>Delete\nLast</b></string>
    <string name="delete_every"><b>Delete\nAll</b></string>
    <string name="help_alert">Keep track of spending habits.\n
        No Cloud.  Local storage only.  Simple to use.\n\n
        1.  Click \'Add Purchase\' to add item to menu.\n
        2.  Short Click item to see purchase list.\n
        3.  Long Click to change item name.\n
    </string>
    <string name="about_alert">Thank you for using this application.\n\n
        Created and developed by FIZ Software.\n
    </string>
    <string name="settings_alert">Settings are disabled.</string>

</resources>
