<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#E5FFCC"
    android:orientation="vertical"
    tools:context=".main">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/post_it_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal"
                android:text="@string/count"
                />

            <TextView
                android:id="@+id/textView2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:textColor="#000000"
                android:maxLength="15"
                />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_marginLeft="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TableRow>

                <Button
                    android:id="@+id/btnAdd"
                    android:text="@string/purchase"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/click_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnDelLast"
                    android:text="@string/delete_last"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginLeft="35dp"
                    android:background="@drawable/click_del_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnDel"
                    android:text="@string/delete_every"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginLeft="35dp"
                    android:background="@drawable/click_del_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="155dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/grand_total"
            />

        <TextView
            android:id="@+id/textView4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20sp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/listviewz"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"/>

</LinearLayout>